--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,3 +8,5 @@ edition = "2021"
 [dependencies]
 actix-web = "4"
 serde = { version = "1.0.136", features = ["derive"]}
+log = "0.4.0"
+env_logger = "0.9.0"
