--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,4 @@ actix-web = "4"
 serde = { version = "1.0.136", features = ["derive"]}
 log = "0.4.0"
 env_logger = "0.9.0"
+actix-session = "0.7.2"
